@@ -1,3 +1,7 @@
+2002-03-22  Dan Espen  <dane@mk.telcordia.com>
+
+	* NEWS: Document FvwmForm timeout.
+
 2002-03-22  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/session.c (MatchWinToSM):
